Fix duplicate scrollbar in card view #3

--- a/form-builder/src/app/pages/dashboard/card-view/card-view.component.less
+++ b/form-builder/src/app/pages/dashboard/card-view/card-view.component.less
@@ -1,6 +1,12 @@
 :host {
   display: block;
-  overflow-x: hidden; /* Prevent horizontal scrolling */
+  overflow-x: hidden;
+  overflow-y: hidden; 
+}
+
+* {
+  overflow-x: hidden;
+  overflow-y: hidden; 
 }
 
 .hover-color(@color) {
@@ -17,7 +23,7 @@ p {
 
 nz-card {
   min-height: 12rem;
-
+  
   span {
     cursor: pointer;
     font-size: 1.2rem;
